RESOLVED FIXED32456
Errors in WebGL[T]Array set() and get() methods
https://bugs.webkit.org/show_bug.cgi?id=32456
Summary Errors in WebGL[T]Array set() and get() methods
Kenneth Russell
Reported 2009-12-11 19:20:18 PST
The explicit get() method defined in WebGLFloatArray.idl should return float, not long.
Attachments
Patch (13.48 KB, patch)
2009-12-12 00:41 PST, Kenneth Russell
no flags
Kenneth Russell
Comment 1 2009-12-11 22:49:04 PST
The set() method's documentation taking a single value is also incorrect, and the implementation rounds the incoming value to an integer.
Kenneth Russell
Comment 2 2009-12-12 00:35:18 PST
Two additional issues: - The JS bindings for most of the arrays' set(index, value) methods were truncating the value to signed char. - The IDL for WebGLUnsignedIntArray.get() needed to return unsigned long rather than long.
Kenneth Russell
Comment 3 2009-12-12 00:41:43 PST
Oliver Hunt
Comment 4 2009-12-12 18:54:00 PST
Comment on attachment 44730 [details] Patch r=me
WebKit Commit Bot
Comment 5 2009-12-12 19:02:22 PST
Comment on attachment 44730 [details] Patch Clearing flags on attachment: 44730 Committed r52058: <http://trac.webkit.org/changeset/52058>
WebKit Commit Bot
Comment 6 2009-12-12 19:02:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.